Google SignIn Integration (WIP)

--- a/SocialConnect/Info.plist
+++ b/SocialConnect/Info.plist
@@ -28,6 +28,22 @@
 				<string>fb143325845706356</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.525420943403-epvtnse70v07iph5m00i603ppu42l87i</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.hypebeast.app</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
