--- a/SocialConnect/GoogleService-Info.plist
+++ b/SocialConnect/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>525420943403-epvtnse70v07iph5m00i603ppu42l87i.apps.googleusercontent.com</string>
+	<string>438709611408-slcvbeukuo3huts4uu9r3lic80500vqv.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.525420943403-epvtnse70v07iph5m00i603ppu42l87i</string>
+	<string>com.googleusercontent.apps.438709611408-slcvbeukuo3huts4uu9r3lic80500vqv</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
@@ -21,8 +21,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true/>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:525420943403:ios:ffc9fd09649a88ec</string>
+	<string>1:438709611408:ios:ffc9fd09649a88ec</string>
 	<key>PROJECT_ID</key>
-	<string>primordial-saga-128507</string>
+	<string>hypebeast-1225</string>
 </dict>
 </plist>
